# GanakysPortal

./: .env.example  .gitignore  ARCHITECTURE.md  FEATURES.md  GANAPORTAL-COMPLETE-REQUIREMENTS-FINAL.md  GanaPortal-Complete-WBS-Final.md  GanaPortal-Phase2-WBS.md  ISSUE_TRACKER.md  MASTER_DELIVERY_PLAN.md  README.md  docker-compose.yml
src/backend/: .env.example  .env.production.template  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Dockerfile.prod  alembic.ini  celerybeat-schedule  pyproject.toml  pytest.ini  requirements.txt  test_api.py  test_security_changes.py
src/backend/alembic/: env.py
src/backend/alembic/versions/: 2026_01_01_0000_00000000a000_initial_schema.py  2026_01_08_1309_23279424a4bb_add_settings_tables.py  2026_01_11_1455_fe952d6e0eac_safe_schema_fixes.py  2026_01_11_1524_de9a83a6cb5d_add_document_categories_and_types.py  2026_01_12_1232_a8f2c4e6b1d3_add_onboarding_tables.py  2026_01_12_1430_b9c3d5f7e2a4_add_recruitment_tables.py  2026_01_12_1500_c0d4e6f8a3b5_add_exit_tables.py  2026_01_13_1000_c1d2e3f4g5h6_add_ai_org_builder.py  2026_01_14_1200_d2e3f4g5h6i7_add_wbs_tables.py  2026_01_14_1300_e3f4g5h6i7j8_add_subscription_tables.py  2026_01_14_1400_f4g5h6i7j8k9_add_superadmin_tables.py  2026_01_14_1500_g5h6i7j8k9l0_add_doa_tables.py  2026_01_14_1600_h6i7j8k9l0m1_add_digital_signature_tables.py  2026_01_14_1700_i7j8k9l0m1n2_add_security_tables.py  2026_01_14_1800_j8k9l0m1n2o3_add_anomaly_detection_tables.py  2026_01_14_1900_k0l1m2n3o4p5_add_esg_tables.py  2026_01_15_0800_l1m2n3o4p5q6_add_hsseq_tables.py  2026_01_15_0900_m2n3o4p5q6r7_add_csr_tables.py  2026_01_15_1000_n3o4p5q6r7s8_add_legal_tables.py  2026_01_15_1100_o4p5q6r7s8t9_add_compliance_tables.py  2026_01_15_1200_p5q6r7s8t9u0_add_manufacturing_tables.py  2026_01_15_1300_q6r7s8t9u0v1_add_quality_tables.py  2026_01_15_1400_r7s8t9u0v1w2_add_remaining_modules.py  2026_01_15_1500_s8t9u0v1w2x3_add_analytics_workflow_modules.py  2026_01_15_1600_t9u0v1w2x3y4_add_currency_assets_expense.py  2026_01_18_0630_add_banking_tables.py  2026_01_18_0700_add_project_tables.py  2026_01_18_0800_add_payroll_tables.py  2026_01_18_0900_add_updated_by_audit_columns.py  2026_01_18_1000_add_soft_delete_columns.py  2026_01_20_1200_add_missing_recruitment_tables.py  2026_01_21_0900_add_ai_recruitment_tables.py  2026_01_21_1500_add_recruitment_performance_indexes.py
src/backend/app/: __init__.py  celery_app.py  main.py
src/backend/app/api/: deps.py
src/backend/app/api/v1/: router.py
src/backend/app/core/: config.py  constants.py  datetime_utils.py  encryption.py  errors.py  secrets.py  security.py
src/backend/app/db/: __init__.py  base.py  session.py
src/backend/app/models/: __init__.py  accounting.py  ai.py  analytics.py  anomaly_detection.py  banking.py  base.py  bill.py  company.py  compliance.py  crm.py  csr.py  currency.py  customer.py  digital_signature.py  doa.py  document.py  ecommerce.py  employee.py  esg.py  exit.py  expense.py  fixed_assets.py  gst.py  hsseq.py  integration.py  invoice.py  leave.py  legal.py  manufacturing.py  mobile.py  onboarding.py  payment.py  payroll.py  project.py  quality.py  recruitment.py  reports.py  security.py  settings.py  (+8 more)
src/backend/app/schemas/: __init__.py  analytics.py  anomaly_detection.py  banking.py  company_profile.py  compliance.py  crm.py  csr.py  currency.py  digital_signature.py  doa.py  document.py  ecommerce.py  esg.py  exit.py  expense.py  fixed_assets.py  gst.py  hsseq.py  integration.py  leave.py  legal.py  manufacturing.py  mobile.py  onboarding.py  org_builder.py  quality.py  recruitment.py  reports.py  security.py  settings.py  subscription.py  superadmin.py  supply_chain.py  timesheet.py  validators.py  wbs.py  workflow.py
src/backend/app/services/: audit_db_service.py  audit_service.py  banking_db_service.py  banking_service.py  compliance_verifier.py  crm_service.py  document_service.py  gst_service.py  leave_service.py  report_service.py  timesheet_service.py
src/backend/app/services/accounting/: __init__.py  account_service.py  journal_service.py
src/backend/app/services/ai/: __init__.py  ai_service.py  anomaly_detection.py  automation.py  categorization.py  chat_service.py  digest_service.py  document_ai.py  nl_to_sql.py  org_builder_service.py
src/backend/app/services/analytics/: __init__.py  dashboard_service.py  kpi_service.py  report_generator.py
src/backend/app/services/anomaly_detection/: __init__.py  alert_service.py  baseline_service.py  dashboard_service.py  detection_service.py  feedback_service.py  model_service.py  pattern_service.py  rule_service.py
src/backend/app/services/backup/: __init__.py  backup_service.py
src/backend/app/services/compliance/: __init__.py  audit_service.py  compliance_service.py  dashboard_service.py  ecr.py  form16.py  policy_service.py  (+4 more)
src/backend/app/tasks/: __init__.py  email_tasks.py  maintenance_tasks.py  notification_tasks.py  report_tasks.py  task_auth.py
src/backend/docs/api/: RECRUITMENT_API.md
src/backend/scripts/: add_missing_tables.sql  create_missing_tables.sql  fix_column_mismatches.sql  fix_schema_mismatch.sql  generate_wbs_tasks.py  migrate_user_management.sql  rotate_credentials.sh  seed_auth.py  seed_wbs.py
src/backend/tests/: conftest.py
src/backend/tests/compliance/: test_esi_calculator.py  test_gst_calculator.py  test_pf_calculator.py  test_pt_calculator.py  test_statutory.py  test_tds_calculator.py
src/backend/tests/integration/: test_api_auth.py  test_api_endpoints.py
src/backend/tests/performance/: test_load.py
src/backend/tests/recruitment/: __init__.py  conftest.py  test_ai_interview.py  test_candidate_portal.py  test_human_interview.py  test_offer_management.py  test_ranklist.py
src/backend/tests/reports/: test_report.py
src/backend/tests/security/: test_security.py
src/backend/tests/unit/: test_models.py  test_services.py
(+1174 files in other folders)
